# Practica6

./: CMakeLists.txt  Farmacia.cpp  Farmacia.h  Laboratorio.cpp  Laboratorio.h  MallaRegular.cpp  MallaRegular.h  MediExpress.cpp  MediExpress.h  PaMedicamento.cpp  PaMedicamento.h  README.md  Stock.cpp  Stock.h  ThashMedicam.cpp  ThashMedicam.h  UTM.cpp  UTM.h  Usuario.cpp  Usuario.h  analisis_Thash.md  farmacias-coord.csv  farmacias.csv  laboratorios.csv  main.cpp  usuarios.csv
img/: CMakeLists.txt
