cmake_minimum_required(VERSION 4.0)
project(Practica6)

set(CMAKE_CXX_STANDARD 20)

add_executable(Practica6 main.cpp
        MediExpress.cpp
        MediExpress.h
        PaMedicamento.cpp
        PaMedicamento.h
        Laboratorio.cpp
        Laboratorio.h
        Farmacia.cpp
        Farmacia.h
        Stock.cpp
        Stock.h
        ThashMedicam.cpp
        ThashMedicam.h
        MallaRegular.cpp
        MallaRegular.h
        Casilla.cpp
        Casilla.h
        Usuario.cpp
        Usuario.h
        UTM.cpp
        UTM.h)
